[RG-114H] Add node groups and routing extensions
